@@ -1,3 +1,9 @@
+2002-01-04  Bradford Hovinen  <hovinen@ximian.com>
+
+	* default-application-properties.c (edit_read): Check if tmp is
+	NULL before continuing
+	Use terminal/exec for terminal executable name key
+
 2001-12-20  Bradford Hovinen  <hovinen@ximian.com>
 
 	* Makefile.am: Clean up
